bug fix in inventory where when you edit order shifts because it is not in desc order

--- a/frontend/src/Inventory/Inventory.css
+++ b/frontend/src/Inventory/Inventory.css
@@ -109,10 +109,13 @@ tr:nth-child(even) {
 .detailLink{
   text-decoration: none;
   font-weight: bolder;
+  font-size: 20px;
+  width: 200px;
 }
 
+
 .descriptionlimit{
-  width: 200px;
+  width: 400px;
   white-space: nowrap;
   overflow:hidden;
   text-overflow: ellipsis;
